--- a/wxApp/CMakeSettings.json
+++ b/wxApp/CMakeSettings.json
@@ -4,13 +4,12 @@
       "name": "x86-Debug",
       "generator": "Visual Studio 16 2019",
       "configurationType": "Debug",
-      //"buildRoot": "${env.LOCALAPPDATA}\\CMakeBuild\\${workspaceHash}\\build\\${name}",
-      "cmakeCommandArgs": "-DCMAKE_TOOLCHAIN_FILE='C:\\Users\\smzb_code\\Source\\repos\\apps\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake'",
+      "cmakeCommandArgs": "",
       "buildCommandArgs": "-m -v:normal",
       "variables": [
         {
-          "name": "CMAKE_TOOLCHAIN_FILE",
-          "value": "C:\\Users\\smzb_code\\Source\\repos\\apps\\vcpkg\\scripts\\buildsystems\\vcpkg.cmake"
+          "name": "",
+          "value": ""
         }
       ]
     }
